kubernetes-manifests/petclinic.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: petclinic
  namespace: default
  labels:
    app: petclinic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: petclinic
              servicePort: http

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: petclinic
  name: petclinic
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: petclinic
  selector:
    app: petclinic

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: petclinic
          image: docker.io/angju8/gradle-docker-example:2.1.0.BUILD-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: petclinic
          volumeMounts:
            - mountPath: /tmp
              name: logs
          readinessProbe:
            httpGet:
              path: /actuator/shutdown
              port: petclinic
            successThreshold: 1
            failureThreshold: 1
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /actuator/shutdown
              port: petclinic
            successThreshold: 1
            failureThreshold: 1
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: logs
          hostPath:
            path: /tmp/logs
            type: Directory
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0%
