kubernetes-manifests/spring.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: test
              servicePort: 80

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: petclinic
  namespace: default
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat-container
          image: tomcat:${TOMCAT_VERSION}
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          livenessProbe:
            exec:
              command:
                - cat
                - /tmp/healthy
  strategy:
    type: RollingUpdate
    rollingUp      maxSurge: 25%
